# pegaflow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/version-bump/: SKILL.md
.github/workflows/: ci.yml
docs/: metrics.md  pd.md
examples/: basic_vllm.py  bench_kv_cache.py  bench_layer_wise.py  ipc_receiver.py  ipc_sender.py  run_vllm_pd_with_pega.py  run_vllm_with_pega.py  share_gpt_bench.py
examples/metric-prometheus/: docker-compose.yml  prometheus.yml
examples/metric-prometheus/grafana/dashboards/: pegaflow.json  router-int.json  vllm.json
examples/metric-prometheus/grafana/provisioning/datasources/: prometheus.yaml
pega-core/: Cargo.toml
pega-core/src/: lib.rs  pinned_pool.rs  storage.rs  transfer.rs
pegaflow-core/: Cargo.toml
pegaflow-core/benches/: pinned_copy.rs
pegaflow-core/src/: allocator.rs  block.rs  cache.rs  gpu_worker.rs  instance.rs  lib.rs  logging.rs  metrics.rs  pinned_mem.rs  pinned_pool.rs  ssd_cache.rs  storage.rs  transfer.rs  uring.rs
pegaflow-core/src/internode/: client.rs  mod.rs  registry.rs  service_discovery.rs  types.rs
pegaflow-metaserver/: Cargo.toml  README.md
pegaflow-metaserver/examples/: basic_client.rs
pegaflow-metaserver/src/: lib.rs  main.rs  proto.rs  service.rs  store.rs
pegaflow-proto/proto/: engine.proto
pegaflow-server/: Cargo.toml
pegaflow-server/src/: lib.rs  main.rs  metric.rs  service.rs  utils.rs
python/: Cargo.toml  README.md  pyproject.toml
python/pegaflow/: __init__.py  _bin_utils.py  _metaserver.py  connector.py  engine_server.py  ipc_wrapper.py  logging_utils.py  pd_router.py  pegaflow.pyi
python/pegaflow/connector/: __init__.py  common.py  connector_metrics.py  scheduler.py  state_manager.py  worker.py
python/pegaflow/sglang/: peagflow_radix_cache.py  transfer_engine.py
python/src/: lib.rs
python/tests/: __init__.py  conftest.py  test_combine_hashes.py  test_engine_client.py
