[package]
name = "pegaflow-core"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc.workspace = true
log.workspace = true
logforth.workspace = true
colored.workspace = true
offset-allocator.workspace = true
hashlink.workspace = true
tokio.workspace = true
rand.workspace = true
shared_memory.workspace = true
uuid.workspace = true
dashmap.workspace = true
opentelemetry.workspace = true
bytesize.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
libc = "0.2"
hex = "0.4"
ahash.workspace = true
io-uring = "0.6"
futures = "0.3"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "pinned_copy"
harness = false

[[bench]]
name = "uds_latency"
harness = false

[[example]]
name = "pinned_alloc"
