[package]
name = "pegaflow-metaserver"
version.workspace = true
edition.workspace = true
default-run = "pegaflow-metaserver"

[lib]
name = "pegaflow_metaserver"
path = "src/lib.rs"

[[bin]]
name = "pegaflow-metaserver"
path = "src/main.rs"

[dependencies]
pegaflow-core.workspace = true
pegaflow-proto = { path = "../pegaflow-proto" }
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
clap.workspace = true
log.workspace = true
logforth.workspace = true
parking_lot.workspace = true
moka = { version = "0.12", features = ["future"] }
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
