[package]
name = "pegaflow-py"
version = "0.0.1"
edition.workspace = true

[lib]
name = "pegaflow"
crate-type = ["cdylib"]

# Binary for pegaflow-server (will be included in wheel by maturin)
[[bin]]
name = "pegaflow-server-py"
path = "src/bin/server.rs"

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
pegaflow-core.workspace = true
pegaflow-proto = { path = "../pegaflow-proto" }
pegaflow-server = { path = "../pegaflow-server" }
tokio.workspace = true
tonic.workspace = true
log.workspace = true
logforth.workspace = true
